[package]
name = "psr_b0943_10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
clap-verbosity-flag = "1.0.0"
env_logger = "0.10.0"
hex = "0.4.3"
heimdall = { path = "../../repos/heimdall-rs/heimdall" }
min-know = { path = "../min-know" }
tokio = { version = "1.21.2", features = ["full"] }
web3 = "0.18.0"