[package]
name = "psr_b0943_10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
clap-verbosity-flag = "1.0.0"
env_logger = "0.10.0"
hex = "0.4.3"
heimdall = { git = "https://github.com/Jon-Becker/heimdall-rs" }
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
min-know = { git = "https://github.com/perama-v/min-know/" }
tokio = { version = "1.21.2", features = ["full"] }
web3 = "0.18.0"
eip55 = "0.3.0"
serde = "1.0.152"
reqwest = "0.11.13"
serde_json = "1.0.91"
bs58 = "0.4.0"
cbor = "0.4.1"